--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -13,6 +13,9 @@ pipeline{
         timeout(time: 1, unit: 'HOURS') 
         disableConcurrentBuilds()
     }
+    parameters {
+        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
+    }
     // parameters {
     //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
 
