--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -5,64 +5,60 @@ pipeline{
             
         }
 }
-    environment { 
-        GREETING = 'good morning'
-    }
 
     options {
         timeout(time: 1, unit: 'HOURS') 
         disableConcurrentBuilds()
     }
-    parameters {
-        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
-    }
-    // parameters {
-    //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-
-    //     text(name: 'BIOGRAPHY', defaultValue: '', description: 'Enter some information about the person')
-
-    //     booleanParam(name: 'TOGGLE', defaultValue: true, description: 'Toggle this value')
-
-    //     choice(name: 'CHOICE', choices: ['One', 'Two', 'Three'], description: 'Pick something')
-
-    //     password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password')
-    // }
-
-    stages {
-       
-        stage ('init') {
-            steps {
-                sh """
-                cd 01-vpc
-                terraform init -reconfigure
-                """
+   
+        stages {
+            stage ('init') {
+                steps {
+                    sh """
+                        cd 01-vpc
+                        terraform init -reconfigure
+                    """
             }
         }
-        stage ('plan') {
-            steps {
-                sh """
-                    cd 01-vpc
-                    terraform plan 
-                """
+            stage ('plan') {
+                steps {
+                    sh """
+                        cd 01-vpc
+                        terraform plan
+                    """
             }
         }
-        stage ('deploy') {
-            steps {
+
+            stage ('deploy') {
                 input {
                 message "Should we continue?"
                 ok "Yes, we should."
-                // submitter  "alice,bob"
+                // submitter "alice,bob"
                 // parameters {
-                //  string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
                 // }
             }
-                sh """
-                    cd 01-vpc
-                    terraform apply -auto-approve 
-                """ 
+                steps {
+                    sh """
+                        cd 01-vpc
+                        terraform apply -auto-approve
+                    """
             }
         }
-    
+
+        stage ('params') {
+            steps {
+                sh """
+                echo "Hello ${params.PERSON}"
+
+                echo "Choice: ${params.CHOICE}"
+
+                echo "Password: ${params.PASSWORD}"
+                
+                echo "Toggle": ${params.TOGGLE}
+                """
+            }
+        }
         
     }
     post { 
@@ -77,3 +73,5 @@ pipeline{
         }
     }
 }
+
+
