--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -33,14 +33,13 @@ pipeline{
                 sh """
                     cd 01-vpc
                     terraform init -reconfigure
-
                 """
             }
         }
-        stage ('build') {
+        stage ('plan') {
             steps {
                 sh """
-                    cd 01-vpc   
+                    cd 01-vpc
                     terraform plan 
                 """
             }
@@ -48,15 +47,18 @@ pipeline{
         stage ('deploye') {
             steps {
                  input {
-                        message "Should we continue?"
-                        ok "Yes, we should."
-                //         submitter "Rajesh"
-                //         parameters {
+                    message "Should we continue?"
+                    ok "Yes, we should."
+                //     submitter "alice,bob"
+                // parameters {
                 //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
                 // }
+
+            }
                 sh """
-                    cd 01-vpc 
-                     terraform apply -auto-approve 
+                    cd 01-vpc
+                    terraform apply -auto-approve
+                
                 """
             }
         }
@@ -64,9 +66,7 @@ pipeline{
         
     }
     post { 
-        always { 
-            echo 'I will always exicute run !'
-        }
+        
         failure { 
             echo 'I will always run when failure !'
         }
@@ -75,5 +75,3 @@ pipeline{
         }
     }
 }
-
-
