--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -45,16 +45,16 @@ pipeline{
             }
         }
         stage ('deploye') {
-            steps {
-                 input {
+              input {
                     message "Should we continue?"
                     ok "Yes, we should."
-                //     submitter "alice,bob"
-                // parameters {
-                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                // }
+                    submitter "alice,bob"
+                parameters {
+                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                }
 
             }
+            steps {
                 sh """
                     cd 01-vpc
                     terraform apply -auto-approve
