--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline{
     options {
         timeout(time: 1, unit: 'HOURS') 
         disableConcurrentBuilds()
+        ansiColor('xterm')
     }
     // parameters {
     //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
