--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -14,17 +14,11 @@ pipeline{
         disableConcurrentBuilds()
         ansiColor('xterm')
     }
-    // parameters {
-    //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+    parameters {
 
-    //     text(name: 'BIOGRAPHY', defaultValue: '', description: 'Enter some information about the person')
+        choice(name: 'action', choices: ['apply', 'destroy', ], description: 'Pick something')
 
-    //     booleanParam(name: 'TOGGLE', defaultValue: true, description: 'Toggle this value')
-
-    //     choice(name: 'CHOICE', choices: ['One', 'Two', 'Three'], description: 'Pick something')
-
-    //     password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password')
-    // }
+    }
 
     stages {
        
@@ -46,10 +40,15 @@ pipeline{
             }
         }
         stage ('deploye') {
+             when {
+                expression {
+                    params.action == 'apply'
+                    params.action == 'destroy'
+                }
+            }
               input {
                     message "Should we continue?"
                     ok "Yes, we should."
-                    submitter "alice,bob"
                 parameters {
                     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
                 }
