--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -69,8 +69,7 @@ pipeline{
     // destroy
 
     stages {
-
-        stage ('deploye') {
+        stage ('destroy') {
              when {
                 expression {
                     ${params.action} == 'destroy'
