--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -62,13 +62,6 @@ pipeline{
             }
         }
         
-
-        
-    }
-
-    // destroy
-
-    stages {
         stage ('destroy') {
              when {
                 expression {
@@ -78,9 +71,9 @@ pipeline{
               input {
                     message "Should we continue?"
                     ok "Yes, we should."
-                parameters {
-                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                }
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
 
             }
             steps {
@@ -91,10 +84,10 @@ pipeline{
                 """
             }
         }
-        
 
         
     }
+   
     post { 
         
         failure { 
