--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -71,9 +71,9 @@ pipeline{
               input {
                     message "Should we continue?"
                     ok "Yes, we should."
-                parameters {
-                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                }
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
 
             }
             steps {
@@ -87,6 +87,7 @@ pipeline{
 
         
     }
+    
    
     post { 
         
