--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -62,6 +62,7 @@ pipeline{
             }
         }
         
+//  destroy
         stage ('destroy') {
              when {
                 expression {
@@ -71,9 +72,9 @@ pipeline{
               input {
                     message "Should we continue?"
                     ok "Yes, we should."
-                // parameters {
-                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                // }
+                parameters {
+                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                }
 
             }
             steps {
@@ -84,7 +85,6 @@ pipeline{
                 """
             }
         }
-
         
     }
     
