--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -1,29 +1,20 @@
-pipeline{
+pipeline {
     agent {
         node {
-            label 'AGENT'
-            
+            label 'AGENT-1'
         }
-}
-    // environment { 
-    //     GREETING = 'good morning'
-    // }
-
+    }
     options {
-        timeout(time: 1, unit: 'HOURS') 
-        disableConcurrentBuilds()
         ansiColor('xterm')
+        // timeout(time: 1, unit: 'HOURS')
+        // disableConcurrentBuilds()
     }
     parameters {
-
-        choice(name: 'action', choices: ['apply', 'destroy', ], description: 'Pick something')
-
+        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
     }
-
+    // build
     stages {
-       
-        stage ('init') {
-            
+        stage('Init') {
             steps {
                 sh """
                     cd 01-vpc
@@ -31,71 +22,67 @@ pipeline{
                 """
             }
         }
-        stage ('plan') {
+        stage('Plan') {
             steps {
                 sh """
                     cd 01-vpc
-                    terraform plan 
+                    terraform plan
                 """
             }
         }
-        stage ('deploye') {
-             when {
-                expression {
-                    ${params.action} == 'apply'
+        stage('Deploy') {
+            when {
+                expression { 
+                    params.action == 'apply'
                 }
             }
-              input {
-                    message "Should we continue?"
-                    ok "Yes, we should."
-                parameters {
-                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                }
-
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+                // submitter "alice,bob"
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
             }
             steps {
                 sh """
                     cd 01-vpc
                     terraform apply -auto-approve
-                
                 """
             }
         }
-        
-//  destroy
-        stage ('destroy') {
-             when {
-                expression {
-                    ${params.action} == 'destroy'
+        stage('Destroy') {
+            when {
+                expression { 
+                    params.action == 'destroy'
                 }
             }
-              input {
-                    message "Should we continue?"
-                    ok "Yes, we should."
-                parameters {
-                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                }
-
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+                // submitter "alice,bob"
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
             }
             steps {
                 sh """
                     cd 01-vpc
                     terraform destroy -auto-approve
-                
                 """
             }
         }
-        
     }
-    
-   
+    // post build
     post { 
-        
-        failure { 
-            echo 'I will always run when failure !'
+        always { 
+            echo 'I will always say Hello again!'
         }
-        success { 
-            echo 'I will always run when success !'
+        failure { 
+            echo 'this runs when pipeline is failed, used generally to send some alerts'
+        }
+        success{
+            echo 'I will say Hello when pipeline is success'
         }
     }
 }
